--- a/book.bib
+++ b/book.bib
@@ -205,3 +205,14 @@
   year = {2014},
   bdsk-url-1 = {http://www.jstatsoft.org/v59/i10/},
 }
+
+@article{meyer1993commitment,
+  title={Commitment to organizations and occupations: Extension and test of a three-component conceptualization.},
+  author={Meyer, John P and Allen, Natalie J and Smith, Catherine A},
+  journal={Journal of applied psychology},
+  volume={78},
+  number={4},
+  pages={538},
+  year={1993},
+  publisher={American Psychological Association}
+}
